<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F2F8"
    android:orientation="vertical"
    android:weightSum="776">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="64"
        android:orientation="horizontal"
        android:weightSum="360">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20" />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="16"
            android:background="@drawable/back_button_img"
            android:contentDescription="@string/todo" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="36" />

        <TextView
            android:id="@+id/headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="top"
            android:text="@string/Login"
            android:textAppearance="@style/headline" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="32" />

    <TextView
        android:id="@+id/introductionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:gravity="top"
        android:text="@string/some_id"
        android:textAppearance="@style/introduction_textview" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="28" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/email_label"
        android:textAppearance="@style/label" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" />

    <EditText
        android:id="@+id/loginEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="null"
        android:backgroundTint="@color/edit_line_color"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:textColor="@color/edit_text_color"
        android:textColorHint="@color/edit_text_color" />


    <Space
        android:id="@+id/space1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/password_label"
        android:textAppearance="@style/label"
        android:visibility="gone"/>

    <Space
        android:id="@+id/space2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/loginPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="null"
        android:backgroundTint="@color/edit_line_color"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/edit_text_color"
        android:textColorHint="@color/edit_text_color"
        android:visibility="gone"/>


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="75" />

    <android.widget.Button
        android:id="@+id/loginContinueButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="56"
        android:background="@drawable/rounding_button"
        android:contentDescription="@string/todo"
        android:text="@string/continue_button"
        android:textAppearance="@style/continue_button" />

</LinearLayout>