<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F2F8"
    android:orientation="vertical"
    android:weightSum="776">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="64"
        android:orientation="horizontal"
        android:weightSum="360">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20" />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="16"
            android:layout_gravity="center"
            android:background="@drawable/back_button_img"
            android:contentDescription="@string/todo" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="36" />

        <TextView
            android:id="@+id/headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="200"
            android:gravity="start"
            android:lineSpacingExtra="2sp"
            android:text="@string/sign_up"
            android:textAppearance="@style/headline"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="32" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/sign_up_nickname_context"
        android:textAppearance="@style/temp_email"
        android:lineSpacingExtra="8sp"
        android:translationY="-4.11sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/max_11_char"
        android:textAppearance="@style/max_11_char"
        android:lineSpacingExtra="3sp"
        android:translationY="-1.45sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="72" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/nickname_label"
        android:textAppearance="@style/label"
        android:lineSpacingExtra="4sp"
        android:translationY="-1.97sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" />

    <EditText
        android:id="@+id/nicknameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="null"
        android:backgroundTint="@color/edit_line_color"
        android:textColor="@color/edit_text_color"
        android:textColorHint="@color/edit_text_color"
        android:hint="@string/nickname_label"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/supporting_nickname"
        android:textAppearance="@style/supporting_"
        android:lineSpacingExtra="4sp"
        android:translationY="-1.97sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80" />

    <android.widget.Button
        android:id="@+id/signupNicknameNextButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="56"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounding_button_main_color"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textAppearance="@style/continue_button"
        android:contentDescription="@string/todo" />


</LinearLayout>