<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setting"
    android:layout_width="300dp"
    android:layout_height="270dp"
    android:layout_gravity="center"
    android:background="@drawable/rounding_box_dialog"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp">

        <Space
            android:layout_width="24dp"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sex_label"
            android:textAppearance="@style/dialog_sex" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#B7BCC8" />


    <RadioGroup
        android:id="@+id/gender_radio_group"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/maleRadioButton"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/sex_radio_button_selector"
            android:button="@null"
            android:drawableTop="@drawable/profile_male_img"
            android:drawablePadding="-10dp"
            android:paddingTop="15dp"
            android:text="@string/male"
            android:textAlignment="center"
            android:textColor="#17264D"
            android:textAppearance="@style/profile_sex" />

        <RadioButton
            android:id="@+id/femaleRadioButton"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/sex_radio_button_selector"
            android:button="@null"
            android:drawableTop="@drawable/profile_female_img"
            android:drawablePadding="-10dp"
            android:paddingTop="15dp"
            android:text="@string/female"
            android:textAlignment="center"
            android:textColor="#17264D"
            android:textAppearance="@style/profile_sex" />
        <!-- Male and Female RadioButtons will be placed here -->

    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:gravity="center"
        android:orientation="horizontal">


        <android.widget.Button
            android:id="@+id/sexDialogCancelButton"
            android:layout_width="79dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounding_box_unchecked"
            android:text="@string/cancel"
            android:textAppearance="@style/sign_up_sex_cancel" />

        <android.widget.Button
            android:id="@+id/sexDialogSaveButton"
            android:layout_width="79dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:background="@drawable/rounding_button_main_color"
            android:text="@string/save"
            android:textAppearance="@style/sign_up_sex_save" />

    </LinearLayout>

</LinearLayout>